--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ interface Props {
     height: 30dvh;
     background:
       linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%),
-    url("cover.jpg")
+    url("/website/cover.jpg")
     center/cover;
     color: white;
     text-align: center;
