--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,7 +2,7 @@
 ---
 <style>
   section {
-    height: 6rem;
+    height: 100%;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
