--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -34,7 +34,7 @@
 
 <nav class="navbar">
   <div class="author-name">
-    <a href="" class="reset-link-style"> Clément Maniette </a>
+    <a href="" class="reset-link-style"> CM </a>
   </div>
 
   <div class="contact">
