--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,11 +14,17 @@ console.debug(video)
   body {
     font-family: 'Open Sans', sans-serif;
   }
+
   .videos {
     display: flex;
     flex-flow: row wrap;
     gap: 1rem;
   }
+
+  .content {
+    height: 100%;
+  }
+
 </style>
 
 <Layout>
