--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import Navbar from '../components/Navbar.astro';
+import Navbar from "../components/Navbar.astro";
+
 ---
 <!doctype html>
 <html lang="en">
@@ -25,7 +26,7 @@ import Navbar from '../components/Navbar.astro';
     />
 
 
-    <title>Clément Maniette</title>
+    <title>In the Pouchette</title>
   </head>
   <body>
     <Navbar />
@@ -42,17 +43,19 @@ import Navbar from '../components/Navbar.astro';
     width: 100%;
     height: 100%;
   }
+
   :root {
-    --navbar-color: rgb(0, 105, 128);
+    --navbar-color: black;
   }
+
   body > div {
     display: grid;
     grid-template-columns: [full-width-start] 2rem [content-start] 1fr [content-end] 2rem [full-width-end];
     height: 100%;
-  }
 
-  .content {
-    grid-column: content;
+    & > * {
+      grid-column: content;
+    }
   }
 
   .full-width {
