--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const video = await getCollection('videos');
 
   section {
     display: grid;
-    grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
+    grid-template-columns: minmax(1rem, 10rem) minmax(20rem, 1fr) minmax(1rem, 10rem);
     & > * {
       grid-column: 2;
     }
