--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,25 +1,21 @@
 ---
 ---
 <style>
-  section {
-    height: 100%;
+  footer {
+    background-color: rgb(8, 15, 37);
     display: flex;
-    flex-flow: row wrap;
-    align-items: center;
+    flex-flow: row nowrap;
     justify-content: center;
     gap: 1rem;
-    background-color: var(--navbar-color);
-
-    & > a {
-      color: white;
+    align-items: center;
+    a {
       text-decoration: none;
+      color: white;
     }
-
   }
-
 </style>
 
-  <section>
+  <footer>
     <a
       class="remove-clicked-color"
       href="https://www.youtube.com/@InthePouchett"
@@ -35,13 +31,4 @@
       >
       <i style="font-size: 4rem" class="fa-brands fa-instagram"></i>
     </a>
-
-    <a
-      class="remove-clicked-color"
-      href="https://www.linkedin.com/in/clément-maniette/"
-      target="_blank"
-      >
-      <i style="font-size: 4rem" class="fa-brands fa-linkedin"></i>
-    </a>
-  </section>
-
+  </footer>
