--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,22 +3,6 @@ import { Image } from "astro:assets";
 import logo from "../assets/logo.webp";
 ---
 <style>
-  .cover-image {
-    background:
-      linear-gradient(0deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%),
-    url("/website/cover.jpg")
-    center/cover;
-    color: white;
-    text-align: center;
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 1rem;
-    font-weight: 700;
-    & > *:last-child {
-      font-size: 1.5rem;
-    }
-  }
-
   .navbar {
     grid-row: 1;
     text-transform: uppercase;
@@ -29,6 +13,11 @@ import logo from "../assets/logo.webp";
     justify-content: space-between;
     border-bottom: 1px solid white;
     height: fit-content;
+    div:nth-child(2) {
+      display: flex;
+      flex-flow: row wrap;
+      gap: 1rem;
+    }
   }
 
   .contact {
@@ -43,41 +32,30 @@ import logo from "../assets/logo.webp";
 
 </style>
 
-<div class="cover-image">
   <nav class="navbar">
     <div>
-      <Image width="100" src={logo} alt="Logo the in the pouchette"></Image>
+      <div>
+        <Image width="100" src={logo} alt="Logo the in the pouchette"></Image>
+      </div>
     </div>
 
     <div>
-      <a href="" class="reset-link-style"> IN THE POUCHETTE </a>
-    </div>
+      <div>
+        <a href="/website" class="reset-link-style"> IN THE POUCHETTE </a>
+      </div>
 
-    <div>
-      <a href="" class="reset-link-style">Live Session</a>
-    </div>
+      <div>
+        <a href="/website/qui-sommes-nous" class="reset-link-style">Qui somme-nous ?<a>
+      </div>
 
-    <div>
-      <a href="" class="reset-link-style">Studio</a>
-    </div>
-
-
-    <div>
-      <a
-        class="reset-link-style"
-        href="mailto:clementmaniette.sound@gmail.com"
-        >
-        <i class="fa-solid fa-envelope"></i>
-        Contact
-      </a>
+      <div>
+        <a
+          class="reset-link-style"
+          href="mailto:clementmaniette.sound@gmail.com"
+          >
+          <i class="fa-solid fa-envelope"></i>
+          Contact
+        </a>
+      </div>
     </div>
   </nav>
-  <div>
-    <p>
-    IN THE POUCHETT
-    </p>
-    <p>
-    Enregistrements, Mixages, Live Sessions
-    </p>
-  </div>
-</div>
