--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,53 +1,46 @@
 ---
+import Navbar from '../components/Navbar.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <style>
-  body {
-    font-family: 'Open Sans', sans-serif;
-  }
-
   .videos {
     display: flex;
     flex-flow: row wrap;
     gap: 1rem;
   }
 
-  .pattern {
-    font-size: 1.5rem;
-    background-image: url('/website/pattern.svg');
-    background-position: center;
-    background-attachment: fixed;
-    color: black;
-    grid-column: full-width;
-    margin: unset;
-    padding: 2rem;
-  }
-
-  .filled {
-    background-color: rgb(8, 15, 37);
+  .cover-image {
+    background:
+      linear-gradient(0deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%),
+    url("/website/cover.jpg")
+    center/cover;
     color: white;
-    grid-column: full-width;
-  }
-
-  h1 {
-    text-transform: uppercase;
-    &, .filled {
-      text-align:center;
-      vertical-align: middle;
-    }
-  }
-
-  section {
+    text-align: center;
     display: grid;
-    grid-template-columns: minmax(1rem, 10rem) minmax(20rem, 1fr) minmax(1rem, 10rem);
-    & > * {
-      grid-column: 2;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 1rem;
+    font-weight: 700;
+    & > *:last-child {
+      font-size: 1.5rem;
     }
   }
 
 </style>
+
+
   <Layout>
+  <Navbar slot="navbar"/>
+  <div class="cover-image full-width">
+    <div>
+      <p>
+      IN THE POUCHETT
+      </p>
+      <p>
+      Enregistrements, Mixages, Live Sessions
+      </p>
+    </div>
+  </div>
   <section class="pattern">
     <p>
     Situés dans le 17ème arrondissement de Paris, le studio In the Pouchett vous accueille pour accompagner vos projets musicaux.
@@ -65,20 +58,19 @@ import Layout from '../layouts/Layout.astro';
     </p>
   </section>
 
- 
-    <h1 class="pattern">Le studio</h1>
-    <section class="filled">
-      <p>
+
+  <h1 class="pattern">Le studio</h1>
+  <section class="filled">
+    <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.
 
-      </p>
-    </section>
+    </p>
+  </section>
 
-    <h1 class="pattern">Le matériel</h1>
-    <section class="filled">
-      <p>
-Microphones (dynamique, à condensateur, à ruban) - Préamplificateurs - Interfaces audio - Moniteurs de studio - Casques de studio - Claviers MIDI - Instruments (guitares, claviers, percussions, etc.) - Enregistreurs multipistes - Logiciels de production musicale (DAW) - Plugins audio (effets, instruments virtuels) - Câbles audio (XLR, jack, MIDI) - Panneaux acoustiques - Supports de microphone - Table de mixage - DI boxes (boîtes de direct) - Enceintes de monitoring - Systèmes de traitement du son - Accessoires divers (pieds de micro, filtres anti-pop, etc.)
-      </p>
-    </section>
-</Layout>
-
+  <h1 class="pattern">Le matériel</h1>
+  <section class="filled">
+    <p>
+    Microphones (dynamique, à condensateur, à ruban) - Préamplificateurs - Interfaces audio - Moniteurs de studio - Casques de studio - Claviers MIDI - Instruments (guitares, claviers, percussions, etc.) - Enregistreurs multipistes - Logiciels de production musicale (DAW) - Plugins audio (effets, instruments virtuels) - Câbles audio (XLR, jack, MIDI) - Panneaux acoustiques - Supports de microphone - Table de mixage - DI boxes (boîtes de direct) - Enceintes de monitoring - Systèmes de traitement du son - Accessoires divers (pieds de micro, filtres anti-pop, etc.)
+    </p>
+  </section>
+  </Layout>
