--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -13,6 +13,9 @@ import logo from "../assets/logo.webp";
     justify-content: space-between;
     border-bottom: 1px solid white;
     height: fit-content;
+    color: white;
+    font-weight: 800;
+    background-color: rgb(8, 15, 37);
     div:nth-child(2) {
       display: flex;
       flex-flow: row wrap;
@@ -30,13 +33,13 @@ import logo from "../assets/logo.webp";
     text-decoration: none;
   }
 
+
+
 </style>
 
   <nav class="navbar">
     <div>
-      <div>
-        <Image width="100" src={logo} alt="Logo the in the pouchette"></Image>
-      </div>
+        <Image width="100" src={logo} alt="Logo de In the Pouchette"></Image>
     </div>
 
     <div>
