--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -14,9 +14,11 @@ import Louis from "../assets/louis.jpg"
     display: flex;
     flex-flow: row wrap;
     align-items: center;
+    justify-content: center;
     gap: 1rem;
     & > p {
       flex: 2;
+      min-width: 30rem;
     }
   }
 
