--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -44,11 +44,11 @@ import logo from "../assets/logo.webp";
 
     <div>
       <div>
-        <a href="/website" class="reset-link-style"> IN THE POUCHETTE </a>
+        <a href="/website" class="reset-link-style"> IN THE POUCHETT </a>
       </div>
 
       <div>
-        <a href="/website/qui-sommes-nous" class="reset-link-style">Qui somme-nous ?<a>
+        <a href="/website/qui-sommes-nous" class="reset-link-style">Qui sommes-nous ?<a>
       </div>
 
       <div>
