--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ import Contact from "../components/Contact.astro";
     />
 
 
-    <title>In the Pouchette</title>
+    <title>In the Pouchett</title>
   </head>
   <body>
     <slot name="navbar"/>
