--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,63 +2,63 @@
 import { Image } from "astro:assets";
 import logo from "../assets/logo.webp";
 ---
+
 <style>
-  .navbar {
-    grid-row: 1;
-    text-transform: uppercase;
-    padding: 0rem 1rem;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid white;
-    height: fit-content;
-    color: white;
-    font-weight: 800;
-    background-color: rgb(8, 15, 37);
-    div:nth-child(2) {
-      display: flex;
-      flex-flow: row wrap;
-      gap: 1rem;
+    .navbar {
+        grid-row: 1;
+        text-transform: uppercase;
+        padding: 0rem 1rem;
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 1px solid white;
+        height: fit-content;
+        color: white;
+        font-weight: 800;
+        background-color: rgb(8, 15, 37);
+        div:nth-child(2) {
+            display: flex;
+            flex-flow: row wrap;
+            gap: 1rem;
+        }
     }
-  }
 
-  .contact {
-    color: white;
-    text-decoration: underline;
-  }
+    .contact {
+        color: white;
+        text-decoration: underline;
+    }
 
-  .reset-link-style {
-    color: unset;
-    text-decoration: none;
-  }
-
-
-
+    .reset-link-style {
+        color: unset;
+        text-decoration: none;
+    }
 </style>
 
-  <nav class="navbar">
-    <div>
-        <Image width="100" src={logo} alt="Logo de In the Pouchette"></Image>
-    </div>
+<nav class="navbar">
+    <a href="/website">
+        <Image width="100" src={logo} alt="Logo de In the Pouchette" />
+    </a>
 
     <div>
-      <div>
-        <a href="/website" class="reset-link-style"> IN THE POUCHETT </a>
-      </div>
+        <div>
+            <a href="/website" class="reset-link-style"> IN THE POUCHETT </a>
+        </div>
 
-      <div>
-        <a href="/website/qui-sommes-nous" class="reset-link-style">Qui sommes-nous ?<a>
-      </div>
+        <div>
+            <a href="/website/qui-sommes-nous" class="reset-link-style"
+                >Qui sommes-nous ?<a> </a>
 
-      <div>
-        <a
-          class="reset-link-style"
-          href="mailto:clementmaniette.sound@gmail.com"
-          >
-          <i class="fa-solid fa-envelope"></i>
-          Contact
-        </a>
-      </div>
+                <div>
+                    <a
+                        class="reset-link-style"
+                        href="mailto:clementmaniette.sound@gmail.com"
+                    >
+                        <i class="fa-solid fa-envelope"></i>
+                        Contact
+                    </a>
+                </div>
+            </a>
+        </div>
     </div>
-  </nav>
+</nav>
