--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,7 +20,7 @@ import logo from "../assets/logo.webp";
         div:nth-child(2) {
             display: flex;
             flex-flow: row wrap;
-            gap: 1rem;
+            gap: 2rem;
         }
     }
 
@@ -46,6 +46,9 @@ import logo from "../assets/logo.webp";
         </div>
 
         <div>
+            <a class="reset-link-style" href="#materiel">Le Matériel</a>
+            <a href="#reference" class="reset-link-style">Références</a>
+            <a href="#studio" class="reset-link-style">Le Studio</a>
             <a href="/website/qui-sommes-nous" class="reset-link-style"
                 >Qui sommes-nous ?<a> </a>
 
