--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,10 @@ const data = await getCollection("videos");
         & > *:last-child {
             font-size: 1.5rem;
         }
+
+        div:nth-child(1) {
+            grid-row: 2;
+        }
     }
 
     .videos {
