update qui sommes nous

--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -33,14 +33,9 @@ import Louis from "../assets/louis.jpg";
 
     <section class="filled">
         <p>
-            In the Pouchett est un projet né de l'amitié de deux passionnés,
-            déterminés à créer un espace de partage et de créativité. Ensemble,
-            ils organisent des ateliers et des événements, rassemblant des
-            artistes et des curieux autour de diverses disciplines. Leur
-            objectif est de promouvoir l'échange d'idées et de talents, tout en
-            cultivant une atmosphère conviviale. Grâce à leur enthousiasme, In
-            the Pouchett devient un véritable lieu de rencontre et d'inspiration
-            pour la communauté.
+            In The Pouchett c'est avant tout deux amis passionnés de musique Live
+            qui décidèrent en 2023 de transformer leur appartement en studio d'enregistrement
+            et de Live Sessions. L'objectif est de mettre l'accent sur l'atmosphère chaleureuse du lieu et de penser l'espace la musique Live et l'image.
         </p>
     </section>
 
@@ -53,29 +48,22 @@ import Louis from "../assets/louis.jpg";
                 sizes={"(max-width: 500px) 250px, 400px"}
                 width={300}
             />
+            <h1>Clément Maniette</h1>
             <p>
-                Clément, l'ingénieur du son du studio, est un véritable maestro
-                des ondes. Avec son oreille aiguisée et sa passion pour la
-                musique, il transforme chaque enregistrement en une œuvre d'art.
-                Toujours à l'écoute des artistes, il sait capturer l'essence de
-                leur créativité. Grâce à son expertise technique et son sens du
-                détail, Clément crée des atmosphères sonores uniques qui font
-                vibrer les auditeurs.
+                Clément est ingénieur du son, réalisateur artistique et multi-instrumentiste. 
+                Avec une formation en acoustique et en traitement du signal, il allie expertise technique et sensibilité artistique. 
+                Connaissant son matériel sur le bout des doigts, il s'engage à donner le meilleur de lui-même lors des prestations de prise de son, de mixage et de mastering.
             </p>
         </div>
     </section>
 
     <section class="filled">
         <div class="people">
+            <h1>Louis Jaumaux</h1>
             <p>
-                Louis, l'intermittent jongleur, est un artiste aux multiples
-                talents. Avec une agilité impressionnante, il fait danser les
-                objets entre ses mains, captivant son public à chaque
-                performance. Sa passion pour le jonglage se mêle à une
-                créativité débordante, lui permettant d'inventer des numéros
-                uniques. Toujours souriant, Louis partage sa joie et son
-                énergie, transformant chaque spectacle en un moment inoubliable
-                de magie et d'émerveillement.
+                Louis est pianiste de jazz et de hip-hop, diplômé du conservatoire. Sa sensibilité à l'esthétique contribue à l'ambiance du studio. 
+                En plus de ses performances musicales, il se spécialise dans la réalisation vidéo des Live Sessions, 
+                mettant en avant son talent et sa vision artistique.
             </p>
             <Picture
                 src={Louis}
