test sans succès élargir le style people

--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -19,7 +19,8 @@ import Louis from "../assets/louis.jpg";
         gap: 1rem;
         & > p {
             flex: 1;
-            //min-width: 30rem;
+            /* min-width: 30rem; */
+            // Trop étroit saute la ligne constamment
         }
     }
 
