--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -27,6 +27,9 @@ import logo from "../assets/logo.webp";
     .contact {
         color: white;
         text-decoration: underline;
+        background-color: rgb(89,171,225);
+        padding: 0.5rem;
+        border-radius: .3rem;
     }
 
     .reset-link-style {
@@ -54,7 +57,7 @@ import logo from "../assets/logo.webp";
 
                 <div>
                     <a
-                        class="reset-link-style"
+                        class="reset-link-style contact"
                         href="mailto:clementmaniette.sound@gmail.com"
                     >
                         <i class="fa-solid fa-envelope"></i>
